@@ -31,7 +31,7 @@ General Public License for more details.
 @finalout
 @titlepage
 @title Transient User and Developer Manual
-@subtitle for version 0.1.0 (v0.1.0-23-g6467626+1)
+@subtitle for version 0.1.0 (v0.1.0-28-g625683c+1)
 @author Jonas Bernoulli
 @page
 @vskip 0pt plus 1filll
@@ -65,7 +65,7 @@ Calling a suffix command usually causes the transient to be exited
 but suffix commands can also be configured to not exit the transient.
 
 @noindent
-This manual is for Transient version 0.1.0 (v0.1.0-23-g6467626+1).
+This manual is for Transient version 0.1.0 (v0.1.0-28-g625683c+1).
 
 @quotation
 Copyright (C) 2018-2019 Jonas Bernoulli <jonas@@bernoul.li>
@@ -657,6 +657,29 @@ soon as the transient is invoked.  If @code{nil}, only a one line summary
 is shown until the user presses a key that forms an incomplete key
 sequence.  If a number, behave as for @code{nil} but also show the commands
 after that many seconds of inactivity.
+@end defopt
+
+@defopt transient-display-buffer-action
+
+This option specifies the action used to display the transient popup
+buffer.  The transient popup buffer is displayed in a window using
+@code{(display-buffer buf transient-display-buffer-action)}.
+
+The value of this option has the form @code{(FUNCTION . ALIST)}, where
+FUNCTION is a function or a list of functions.  Each such function
+should accept two arguments: a buffer to display and an alist of the
+same form as ALIST@.  See @ref{Choosing Window,,,elisp,}.
+
+The default is @code{(display-buffer-in-side-window (side . bottom))}.
+This displays the window at the bottom of the selected frame.
+Another useful value is @code{(display-buffer-below-selected)}.  This is
+what @code{magit-popup} used by default.  For more alternatives see
+@ref{Display Action Functions,,,elisp,}.
+
+It may be possible to display the window in another frame, but
+whether that works in practice depends on the window-manager.
+If the window manager selects the new window (Emacs frame),
+then it doesn't work.
 @end defopt
 
 @defopt transient-highlight-mismatched-keys
@@ -2110,10 +2133,8 @@ Hydra (see @uref{https://github.com/abo-abo/hydra}) is another package that
 provides features similar to those of Transient.
 
 Both packages use transient keymaps to make a set of commands
-temporarily available and the @code{lv} library to show these commands in a
-popup buffer, which looks like it is using the echo area (but without
-actually using the echo area).  The author of Hydra is also the author
-of @code{lv}, which is maintained in the same repository.
+temporarily available and show the available commands in a popup
+buffer.
 
 A Hydra "body" is equivalent to a Transient "prefix" and a Hydra
 "head" is equivalent to a Transient "suffix".  Hydra has no equivalent
